--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -12,6 +12,17 @@ month={Dec},
 pages={507–518}
 }
 
+@Misc{Giorgini1996,
+title = {JPL's On-Line Solar System Data Service},
+author = {Giorgini, J.D. and Yeomans, D.K. and Chamberlin, A.B. and Chodas, P.W. and Jacobson, R.A. and Keesey, M.S. and Lieske, J.H. and Ostro, S.J. and Standish, E.M. and Wimberly, R.N.},
+howpublished = {BULLETIN OF THE AMERICAN ASTRONOMICAL SOCIETY (BAAS)},
+year = {1996},
+volume = {28},
+number = {13},
+pages = {1158}
+}
+
+
 @Article{Tsiganis2005, 
 title={Origin of the orbital architecture of the giant planets of the Solar System},
 volume={435},
