--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -1,3 +1,17 @@
+@Article{Johnson1973,
+title={Topography on satellite surfaces and the shape of asteroids},
+volume={18},
+url={http://dx.doi.org/10.1016/0019-1035(73)90064-X},
+DOI={10.1016/0019-1035(73)90064-x},
+number={4},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Johnson, T.V. and McGetchin, T.R.},
+year={1973},
+month={Apr},
+pages={612–620}
+}
+
 @Article{Millis1987,
 title={The size, shape, density, and Albedo of Ceres from its occultation of BD+8°471},
 volume={72},
@@ -49,6 +63,34 @@ author={Gomes, R. and Levison, H. F. and Tsiganis, K. and Morbidelli, A.},
 year={2005},
 month={May},
 pages={466–469}
+}
+
+@Article{Thomas2005,
+title={Differentiation of the asteroid Ceres as revealed by its shape},
+volume={437},
+url={http://dx.doi.org/10.1038/nature03938},
+DOI={10.1038/nature03938},
+number={7056},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Thomas, P. C. and Parker, J. Wm. and McFadden, L. A. and Russell, C. T. and Stern, S. A. and Sykes, M. V. and Young, E. F.},
+year={2005},
+month={Sep},
+pages={224–226}
+}
+
+@Article{Carry2008,
+title={Near-infrared mapping and physical properties of the dwarf-planet Ceres},
+volume={478},
+url={http://dx.doi.org/10.1051/0004-6361:20078166},
+DOI={10.1051/0004-6361:20078166},
+number={1},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Carry, B. and Dumas, C. and Fulchignoni, M. and Merline, W. J. and Berthier, J. and Hestroffer, D. and Fusco, T. and Tamblyn, P.},
+year={2008},
+month={Jan},
+pages={235–244}
 }
 
 @Article{Widemann2009,
