--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -12,9 +12,8 @@
 \usepackage{color}
 \usepackage{epstopdf}
 \usepackage{pdflscape}
-\usepackage[breaklinks]{hyperref}
+\usepackage[breaklinks=true]{hyperref}
 \usepackage[comma,authoryear]{natbib}
-\usepackage{url}
 \usepackage[nonumberlist]{glossaries}
 %\usepackage[alf]{abntcite}
 
@@ -292,6 +291,8 @@ $959 \pm 5$  & $0.05  \pm 0.01$  & Occultação & 5\\
 
 \section{Satélites Irregulares}
 \label{Sec: Irregulares}
+
+%\citep{GomesJunior2015-Irregular}
 
 \section{TNOs}
 \label{Sec: TNOs}
