--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -187,10 +187,21 @@ url = {http://sbn.psi.edu/pds/resource/occ.html},
 
 @Article{GomesJunior2015-Ceres,
 author = {Gomes-Júnior, A. R. and others},
-title = {Results of two multi-chord stellar occultations by dwarf planet (1) Ceres},
+title = {\href{http://arxiv.org/abs/1504.04902}{Results of two multi-chord stellar occultations by dwarf planet (1) Ceres}},
+url = {http://arxiv.org/abs/1504.04902},
 journal = {Monthly Notices},
+note = {aceito,},
 year = {2015},
 }
+
+@Article{GomesJunior2015-Irregular,
+author = {Gomes-Júnior, A. R. and others},
+title = {Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
+journal = {A\&A},
+note = {aceito},
+year = {2015},
+}
+
 
 
 
