--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -1,5 +1,5 @@
 @Article{Johnson1973,
-title={Topography on satellite surfaces and the shape of asteroids},
+title={\href{http://dx.doi.org/10.1016/0019-1035(73)90064-X}{Topography on satellite surfaces and the shape of asteroids}},
 volume={18},
 url={http://dx.doi.org/10.1016/0019-1035(73)90064-X},
 DOI={10.1016/0019-1035(73)90064-x},
@@ -13,7 +13,7 @@ pages={612–620}
 }
 
 @Article{Millis1987,
-title={The size, shape, density, and Albedo of Ceres from its occultation of BD+8°471},
+title={\href{http://dx.doi.org/10.1016/0019-1035(87)90048-0}{The size, shape, density, and Albedo of Ceres from its occultation of BD+8°471}},
 volume={72},
 url={http://dx.doi.org/10.1016/0019-1035(87)90048-0},
 DOI={10.1016/0019-1035(87)90048-0},
@@ -38,7 +38,7 @@ pages = {1158}
 
 
 @Article{Tsiganis2005, 
-title={Origin of the orbital architecture of the giant planets of the Solar System},
+title={\href{http://dx.doi.org/10.1038/nature03539}{Origin of the orbital architecture of the giant planets of the Solar System}},
 volume={435},
 url={http://dx.doi.org/10.1038/nature03539},
 DOI={10.1038/nature03539},
@@ -52,7 +52,7 @@ pages={459–461}
 }
 
 @Article{Gomes2005,
-title={Origin of the cataclysmic Late Heavy Bombardment period of the terrestrial planets},
+title={\href{http://dx.doi.org/10.1038/nature03676}{Origin of the cataclysmic Late Heavy Bombardment period of the terrestrial planets}},
 volume={435},
 url={http://dx.doi.org/10.1038/nature03676},
 DOI={10.1038/nature03676},
@@ -66,7 +66,7 @@ pages={466–469}
 }
 
 @Article{Thomas2005,
-title={Differentiation of the asteroid Ceres as revealed by its shape},
+title={\href{http://dx.doi.org/10.1038/nature03938}{Differentiation of the asteroid Ceres as revealed by its shape}},
 volume={437},
 url={http://dx.doi.org/10.1038/nature03938},
 DOI={10.1038/nature03938},
@@ -80,7 +80,7 @@ pages={224–226}
 }
 
 @Article{Carry2008,
-title={Near-infrared mapping and physical properties of the dwarf-planet Ceres},
+title={\href{http://dx.doi.org/10.1051/0004-6361:20078166}{Near-infrared mapping and physical properties of the dwarf-planet Ceres}},
 volume={478},
 url={http://dx.doi.org/10.1051/0004-6361:20078166},
 DOI={10.1051/0004-6361:20078166},
@@ -94,7 +94,7 @@ pages={235–244}
 }
 
 @Article{Widemann2009,
-title={Titania’s radius and an upper limit on its atmosphere from the September 8, 2001 stellar occultation},
+title={\href{http://dx.doi.org/10.1016/j.icarus.2008.09.011}{Titania’s radius and an upper limit on its atmosphere from the September 8, 2001 stellar occultation}},
 volume={199},
 url={http://dx.doi.org/10.1016/j.icarus.2008.09.011},
 DOI={10.1016/j.icarus.2008.09.011},
@@ -108,7 +108,7 @@ pages={458–476}
 }
 
 @Article{Sicardy2011,
-title={A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
+title={\href{http://dx.doi.org/10.1038/nature10550}{A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation}},
 volume={478},
 url={http://dx.doi.org/10.1038/nature10550},
 DOI={10.1038/nature10550},
@@ -128,6 +128,20 @@ year = {2011},
 page = {85},
 }
 
+@Article{Jacobson2012,
+title={\href{http://dx.doi.org/10.1088/0004-6256/144/5/132}{IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES AND ASTROMETRIC RECOVERIES IN 2009–2011}},
+volume={144},
+url={http://dx.doi.org/10.1088/0004-6256/144/5/132},
+DOI={10.1088/0004-6256/144/5/132},
+number={5},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Jacobson, R. and Brozović, M. and Gladman, B. and Alexandersen, M. and Nicholson, P. D. and Veillet, C.},
+year={2012},
+month={Oct},
+pages={132}
+}
+
 @InProceedings{McKinnon2012,
 author = {McKinnon, W. B.},
 title = {Where did Ceres accrete? },
@@ -138,7 +152,7 @@ number = {6475},
 }
 
 @Article{Zacharias2013,
-title={THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)},
+title={\href{http://dx.doi.org/10.1088/0004-6256/145/2/44}{THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)}},
 volume={145},
 url={http://dx.doi.org/10.1088/0004-6256/145/2/44},
 DOI={10.1088/0004-6256/145/2/44},
@@ -152,7 +166,7 @@ pages={44}
 }
 
 @Article{Braga-Ribas2013,
-title={THE SIZE, SHAPE, ALBEDO, DENSITY, AND ATMOSPHERIC LIMIT OF TRANSNEPTUNIAN OBJECT (50000) QUAOAR FROM MULTI-CHORD STELLAR OCCULTATIONS},
+title={\href{http://dx.doi.org/10.1088/0004-637X/773/1/26}{THE SIZE, SHAPE, ALBEDO, DENSITY, AND ATMOSPHERIC LIMIT OF TRANSNEPTUNIAN OBJECT (50000) QUAOAR FROM MULTI-CHORD STELLAR OCCULTATIONS}},
 volume={773},
 url={http://dx.doi.org/10.1088/0004-637X/773/1/26},
 DOI={10.1088/0004-637x/773/1/26},
@@ -166,7 +180,7 @@ pages={26}
 }
 
 @Article{Drummond2014,
-title={Dwarf planet Ceres: Ellipsoid dimensions and rotational pole from Keck and VLT adaptive optics images},
+title={\href{http://dx.doi.org/10.1016/j.icarus.2014.03.038}{Dwarf planet Ceres: Ellipsoid dimensions and rotational pole from Keck and VLT adaptive optics images}},
 volume={236},
 url={http://dx.doi.org/10.1016/j.icarus.2014.03.038},
 DOI={10.1016/j.icarus.2014.03.038},
@@ -181,7 +195,7 @@ pages={28–37}
 @Article{Dunham2014,
 author = {Dunham D.W. and others},
 year = {2014},
-journal = {Asteroid Occultations V12.0. EAR-A-3-RDR-OCCULTATIONS-V12.0. NASA Planetary Data System},
+journal = {\href{http://sbn.psi.edu/pds/resource/occ.html}{Asteroid Occultations V12.0. EAR-A-3-RDR-OCCULTATIONS-V12.0. NASA Planetary Data System}},
 url = {http://sbn.psi.edu/pds/resource/occ.html},
 }
 
@@ -303,16 +317,6 @@ journal = {The Astronomical Journal},
 year = {2003},
 volume = {126},
 pages = {398–429},
-}
-
-@Article{Jacobson2012,
-author = {R. Jacobson and M. Brozović and B. Gladman and M. Alexandersen and P. D. Nicholson and C. Veillet},
-title = {IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES
-AND ASTROMETRIC RECOVERIES IN 2009–2011},
-journal = {The Astronomical Journal},
-year = {2012},
-volume = {144},
-pages = {8},
 }
 
 @Article{Grav2003,
