--- a/Irregulares/AA-2015-26273/Irregulares.tex
+++ b/Irregulares/AA-2015-26273/Irregulares.tex
@@ -126,7 +126,7 @@ Centro Universitário Estadual da Zona Oeste, Av. Manual Caldeira de Alvarenga 1
 
 
 
-\date{Received: Abr 08, 2015; accepted: May 06, 2015}
+\date{Received: ; accepted: }
 
 
 \abstract
@@ -539,7 +539,7 @@ This sample corresponds to 9 observations of Himalia from February 16, 2007 and 
 \end{table*}
 
 \begin{table}
-\caption{\label{Tab: comparison-horizons} Comparison of positions obtained with \citealp{Jacobson2012}.}
+\caption{\label{Tab: comparison-horizons} Comparison between the number of positions obtained in our work with the number used in the numerical integration of orbits by the JPL as published by \citealp{Jacobson2012}.}
 \begin{centering}
 \begin{tabular}{lccccc}
 \hline  \hline
@@ -575,7 +575,6 @@ Nereid & 803 & - & 99 & 902 & 716 \tabularnewline
 \hline
 \end{tabular}
 \par\end{centering}
-Comparison between the number of positions obtained in our work with the number used in the numerical integration of orbits by the JPL as published by \citealp{Jacobson2012}.
 \end{table}
 
 
