--- a/Irregulares/references.bib
+++ b/Irregulares/references.bib
@@ -1,97 +1,113 @@
 
 @ARTICLE{Smith1989,
-   author = {{Smith}, B. A. and others},
-    title = "{Voyager 2 at Neptune: Imaging Science Results}",
-  journal = {Science},
-     year = 1989,
-   volume = 246,
-    pages = {1422-1449},
+title={Voyager 2 at Neptune: Imaging Science Results},
+volume={246},
+url={http://dx.doi.org/10.1126/science.246.4936.1422},
+DOI={10.1126/science.246.4936.1422},
+number={4936},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)},
+author={Smith, B. A. and Soderblom, L. A. and Banfield, D. and Barnet, c. and Basilevsky, A. T. and Beebe, R. F. and Bollinger, K. and Boyce, J. M. and Brahic, A. and Briggs, G. A. and et al.},
+year={1989},
+month={Dec},
+pages={1422–1449}
 }
 
 @ARTICLE{Sheppard2003,
-   author = {{Sheppard}, S.~S. and {Jewitt}, D.~C.},
-    title = "{An abundant population of small irregular satellites around Jupiter}",
-  journal = {Nature},
-     year = 2003,
-    month = may,
-   volume = 423,
-    pages = {261},
+title={An abundant population of small irregular satellites around Jupiter},
+volume={423},
+url={http://dx.doi.org/10.1038/nature01584},
+DOI={10.1038/nature01584},
+number={6937},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Sheppard, Scott S. and Jewitt, David C.},
+year={2003},
+month={May},
+pages={261–263}
 }
 
 @ARTICLE{Desmars2013,
-   author = {{Desmars}, J. and others},
-    title = "{Phoebe’s orbit from ground-based and space-based observations}",
-  journal = {Astronomy and Astrophysics},
-     year = 2013,
-    month = may,
-   volume = 553,
+title={Phoebe’s orbit from ground-based and space-based observations},
+volume={553},
+url={http://dx.doi.org/10.1051/0004-6361/201321114},
+DOI={10.1051/0004-6361/201321114},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Desmars, J. and Li, S. N. and Tajeddine, R. and Peng, Q. Y. and Tang, Z. H.},
+year={2013},
+month={Apr},
+pages={A36}
 }
 
 @ARTICLE{Clark2005,
-   author = {{Clark}, R.~N. and others},
-    title = "{Compositional maps of Saturn’s moon Phoebe from imaging spectroscopy}",
-  journal = {Nature},
-     year = 2005,
-    month = may,
-   volume = 435,
-    pages = {66},
+title={Compositional maps of Saturn’s moon Phoebe from imaging spectroscopy},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03558},
+DOI={10.1038/nature03558},
+number={7038},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Clark, Roger N. and Brown, Robert H. and Jaumann, Ralf and Cruikshank, Dale P. and Nelson, Robert M. and Buratti, Bonnie J. and McCord, Thomas B. and Lunine, J. and Baines, K. H. and Bellucci, G. and et al.},
+year={2005},
+month={May},
+pages={66–69}
 }
 
 @article{Grav2003,
-title = "Photometric survey of the irregular satellites ",
-journal = "Icarus ",
-volume = "166",
-number = "1",
-pages = "33 - 45",
-year = "2003",
-note = "",
-issn = "0019-1035",
-doi = "http://dx.doi.org/10.1016/j.icarus.2003.07.005",
-url = "http://www.sciencedirect.com/science/article/pii/S0019103503002318",
-author = "Tommy Grav and Matthew J. Holman and Brett J. Gladman and Kaare Aksnes",
-keywords = "Photometry",
-keywords = "Satellite of Jupiter",
-keywords = "Satellite of Saturn",
-keywords = "Satellite of Uranus",
-keywords = "Surfacessatellite "
+title={Photometric survey of the irregular satellites},
+volume={166},
+url={http://dx.doi.org/10.1016/j.icarus.2003.07.005},
+DOI={10.1016/j.icarus.2003.07.005},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Grav, Tommy and Holman, Matthew J. and Gladman, Brett J. and Aksnes, Kaare},
+year={2003},
+month={Nov},
+pages={33–45}
 }
 
 @ARTICLE{Grav2007,
-title = "A deeper look at the colors of the saturnian irregular satellites ",
-journal = "Icarus ",
-volume = "191",
-number = "1",
-pages = "267 - 285",
-year = "2007",
-note = "",
-issn = "0019-1035",
-doi = "http://dx.doi.org/10.1016/j.icarus.2007.04.020",
-url = "http://www.sciencedirect.com/science/article/pii/S0019103507001868",
-author = "Tommy Grav and James Bauer",
-keywords = "Irregular satellites",
-keywords = "Photometry",
-keywords = "Satellitessurfaces",
-keywords = "Saturnsatellites "
+title={A deeper look at the colors of the saturnian irregular satellites},
+volume={191},
+url={http://dx.doi.org/10.1016/j.icarus.2007.04.020},
+DOI={10.1016/j.icarus.2007.04.020},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Grav, T and Bauer, J},
+year={2007},
+month={Nov},
+pages={267–285}
 }
 
 @Article{Jacobson2012,
-author = {{Jacobson}, R. and others},
-title = {IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES
-AND ASTROMETRIC RECOVERIES IN 2009–2011},
-journal = {The Astronomical Journal},
-year = {2012},
-volume = {144},
-pages = {8 pgs},
+title={IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES AND ASTROMETRIC RECOVERIES IN 2009–2011},
+volume={144},
+url={http://dx.doi.org/10.1088/0004-6256/144/5/132},
+DOI={10.1088/0004-6256/144/5/132},
+number={5},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Jacobson, R. and Brozović, M. and Gladman, B. and Alexandersen, M. and Nicholson, P. D. and Veillet, C.},
+year={2012},
+month={Oct},
+pages={132}
 }
 
 @Article{Porco2003,
-author = {{Porco}, C. and others},
-title = {Cassini imaging of Jupiter's atmosphere, satellites, and rings},
-journal = {Science},
-year = {2003},
-volume = {299},
-number = {5612},
-pages = {1541-1547},
+title={Cassini Imaging of Jupiter’s Atmosphere, Satellites, and Rings},
+volume={299},
+url={http://dx.doi.org/10.1126/science.1079462},
+DOI={10.1126/science.1079462},
+number={5612},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)},
+author={Porco, C. C. and West, Robert A. and McEwen, Alfred and others},
+year={2003},
+month={Mar},
+pages={1541–1547}
 }
 
 @Article{Lindegren1977,
@@ -104,62 +120,73 @@ pages = {55-72},
 }
 
 @Article{Emelyanov2008,
-author = {{Emelyanov}, N. V. and {Arlot}, J.-E.},
-title = {The natural satellites ephemerides facility MULTI-SAT},
-journal = {Astronomy and Astrophysics},
-year = {2008},
-volume = {487},
-pages = {759–765},
+title={The natural satellites ephemerides facility MULTI-SAT},
+volume={487},
+url={http://dx.doi.org/10.1051/0004-6361:200809790},
+DOI={10.1051/0004-6361:200809790},
+number={2},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Emel’yanov, N. V. and Arlot, J.-E.},
+year={2008},
+month={Aug},
+pages={759–765}
 }
 
 @article{Thomas2010,
-title = "Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission ",
-journal = "Icarus ",
-volume = "208",
-number = "1",
-pages = "395 - 401",
-year = "2010",
-note = "",
-issn = "0019-1035",
-doi = "http://dx.doi.org/10.1016/j.icarus.2010.01.025",
-url = "http://www.sciencedirect.com/science/article/pii/S0019103510000448",
-author = "P.C. {Thomas}",
-keywords = "Saturn, Satellites",
-keywords = "Geophysics",
-keywords = "Geological processes "
+title={Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission},
+volume={208},
+url={http://dx.doi.org/10.1016/j.icarus.2010.01.025},
+DOI={10.1016/j.icarus.2010.01.025},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Thomas, P.C.},
+year={2010},
+month={Jul},
+pages={395–401}
 }
 
 @article {Thomas1991,
-author = {{Thomas}, Peter and {Veverka}, Joseph and {Helfenstein}, Paul},
-title = {Voyager observations of Nereid},
-journal = {Journal of Geophysical Research: Space Physics},
-volume = {96},
-number = {S01},
-issn = {2156-2202},
-url = {http://dx.doi.org/10.1029/91JA01735},
-doi = {10.1029/91JA01735},
-pages = {19253--19259},
-year = {1991},
+title={Voyager observations of Nereid},
+volume={96},
+url={http://dx.doi.org/10.1029/91JA01735},
+DOI={10.1029/91ja01735},
+number={S01},
+journal={J. Geophys. Res.},
+publisher={Wiley-Blackwell},
+author={Thomas, Peter and Veverka, Joseph and Helfenstein, Paul},
+year={1991},
+pages={19253}
 }
 
 @article {Braga-Ribas2014,
-author = {{Braga-Ribas}, Felipe and others},
-title = {A ring system detected around the Centaur (10199) Chariklo},
-journal = {Nature},
-number = {508},
-pages = {72},
-year = {2014},
+title={A ring system detected around the Centaur (10199) Chariklo},
+volume={508},
+url={http://dx.doi.org/10.1038/nature13155},
+DOI={10.1038/nature13155},
+number={7494},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Snodgrass, C. and Roques, F. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Duffard, R. and Jehin, E. and et al.},
+year={2014},
+month={Mar},
+pages={72–75}
 }
 
 @Article{deBruijne2012,
-author = {{de Bruijne}, J. H. J.},
-title = {Science performance of Gaia, ESA’s space-astrometry mission},
-journal = {Ap\&SS},
-year = {2012},
-volume = {341},
-pages = {31},
+title={Science performance of Gaia, ESA’s space-astrometry mission},
+volume={341},
+url={http://dx.doi.org/10.1007/s10509-012-1019-4},
+DOI={10.1007/s10509-012-1019-4},
+number={1},
+journal={Astrophysics and Space Science},
+publisher={Springer Science + Business Media},
+author={de Bruijne, J. H. J.},
+year={2012},
+month={Mar},
+pages={31–41}
 }
-
 
 @INPROCEEDINGS{Jones2000,
    author = {{Jones}, H. and {Valdes}, F.},
@@ -176,40 +203,29 @@ booktitle = {"The IRAF Mosaic Data Reduction Package" in Astronomical Data Analy
 }
 
 @ARTICLE{2010A&A...515A..32A,
-   author = {{Assafin}, M. and {Camargo}, J.~I.~B. and {Vieira Martins}, R. and 
-	{Andrei}, A.~H. and {Sicardy}, B. and {Young}, L. and {da Silva Neto}, D.~N. and 
-	{Braga-Ribas}, F.},
-    title = "{Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008-2015}",
-  journal = {Astronomy and Astrophysics},
- keywords = {astrometry, occultations, planets and satellites: individual: Pluto, planets and satellites: individual: Charon, planets and satellites: individual: Nix, planets and satellites: individual: Hydra},
-     year = 2010,
-    month = jun,
-   volume = 515,
-      eid = {A32},
-    pages = {A32},
-      doi = {10.1051/0004-6361/200913690},
-   adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...515A..32A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+title={Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008–2015},
+volume={515},
+url={http://dx.doi.org/10.1051/0004-6361/200913690},
+DOI={10.1051/0004-6361/200913690},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and Andrei, A. H. and Sicardy, B. and Young, L. and da Silva Neto, D. N. and Braga-Ribas, F.},
+year={2010},
+month={Jun},
+pages={A32}
 }
 
 @ARTICLE{2012A&A...541A.142A,
-   author = {{Assafin}, M. and {Camargo}, J.~I.~B. and {Vieira Martins}, R. and 
-	{Braga-Ribas}, F. and {Sicardy}, B. and {Andrei}, A.~H. and 
-	{da Silva Neto}, D.~N.},
-    title = "{Candidate stellar occultations by large trans-Neptunian objects up to 2015}",
-  journal = {Astronomy and Astrophysics},
-archivePrefix = "arXiv",
-   eprint = {1204.4234},
- primaryClass = "astro-ph.EP",
- keywords = {astrometry, occultations, Kuiper belt: general},
-     year = 2012,
-    month = may,
-   volume = 541,
-      eid = {A142},
-    pages = {A142},
-      doi = {10.1051/0004-6361/201118349},
-   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...541A.142A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+title={Candidate stellar occultations by large trans-Neptunian objects up to 2015},
+volume={541},
+url={http://dx.doi.org/10.1051/0004-6361/201118349},
+DOI={10.1051/0004-6361/201118349},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and Braga-Ribas, F. and Sicardy, B. and Andrei, A. H. and da Silva Neto, D. N.},
+year={2012},
+month={May},
+pages={A142}
 }
 
 @INPROCEEDINGS{2011gfun.conf...85A,
@@ -227,20 +243,15 @@ booktitle = {Gaia follow-up network for the solar system objects : Gaia FUN-SSO 
 }
 
 @ARTICLE{2013AJ....145...44Z,
-   author = {{Zacharias}, N. and {Finch}, C.~T. and {Girard}, T.~M. and {Henden}, A. and 
-	{Bartlett}, J.~L. and {Monet}, D.~G. and {Zacharias}, M.~I.},
-    title = "{The Fourth US Naval Observatory CCD Astrograph Catalog (UCAC4)}",
-  journal = {\aj},
-archivePrefix = "arXiv",
-   eprint = {1212.6182},
- primaryClass = "astro-ph.IM",
- keywords = {astrometry, catalogs, reference systems, stars: kinematics and dynamics},
-     year = 2013,
-    month = feb,
-   volume = 145,
-      eid = {44},
-    pages = {44},
-      doi = {10.1088/0004-6256/145/2/44},
-   adsurl = {http://adsabs.harvard.edu/abs/2013AJ....145...44Z},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+title={THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)},
+volume={145},
+url={http://dx.doi.org/10.1088/0004-6256/145/2/44},
+DOI={10.1088/0004-6256/145/2/44},
+number={2},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Zacharias, N. and Finch, C. T. and Girard, T. M. and Henden, A. and Bartlett, J. L. and Monet, D. G. and Zacharias, M. I.},
+year={2013},
+month={Jan},
+pages={44}
 }
